tests/baselines/reference/parserComputedPropertyName23.errors.txt
parserComputedPropertyName23.ts(2,10): error TS2304: Cannot find name 'e'.


==== parserComputedPropertyName23.ts (1 errors) ====
    declare class C {
        get [e](): number 
             ~
!!! error TS2304: Cannot find name 'e'.
    }